MDEV-29830 Assertion `table->versioned()' in THD::vers_insert_history_fast

remove assert temporarily, the proper fix comes after MDEV-29833